[build-system]
requires = [
    'setuptools==67.6.1',
    'setuptools-scm',
    'Cython==0.29.33',
    'wheel==0.40.0',
    'flit'
]
build-backend = "setuptools.build_meta:__legacy__"

[tool.flit.metadata]
module = "aiosftp"
author = "Jesus Lara Gimenez"
author-email = "jesuslarag@gmail.com"
home-page = "https://github.com/phenobarbital/aiosftp"
license = "Apache 2"
keywords = "ftp, ftp server, sftp server, ssh server, asyncio"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Environment :: Web Environment",
  "Framework :: AsyncIO",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
]
description-file = "README.md"
requires-python = ">=3.9.16"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]

filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]
